--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,15 +2,15 @@
     <section class="bg-[#FD6934] rounded-[15px] flex justify-between p-10 w-[50%]">
         <div class="w-[50%]">
             <h1 class="text-white text-[48px] font-bold text-center">Login</h1>
-            <form class="flex flex-col gap-8 items-center justify-center mt-10">
+            <form [formGroup]="registerForm" class="flex flex-col gap-8 items-center justify-center mt-10">
                 <div class="flex flex-col gap-2">
                     <label for="email" class="text-white text-[24px] font-thin">Email</label>
-                    <input type="email" id="email" name="email" [formControl]="registerForm.controls.email" placeholder="Enter your email"
+                    <input type="email" id="email" name="email" formControlName="email" placeholder="Enter your email"
                     class="bg-white rounded-lg p-2">
                 </div>
                 <div class="flex flex-col gap-2">
                     <label for="password" class="text-white text-[24px] font-sans">Password</label>
-                    <input type="password" id="password" name="password" [formControl]="registerForm.controls.password" placeholder="Enter your password"
+                    <input type="password" id="password" name="password" formControlName="password" placeholder="Enter your password"
                     class="bg-white rounded-lg p-2 w-full">
                 </div>
                 <div class="flex flex-col gap-5 items-center justify-center">
