- NEW CONTENT -  - Register temporal para probar el registro  - Guardar datos de registro en el servicio  - No funciona el registro

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="p-6 bg-[#EBEBEB] rounded-[15px]">
     <img alt="Card" [src]="exercise.gifUrl" />
-    <p>Equipo: {{ exercise.equipment }}</p>
-    <p>Nombre: {{ exercise.name }}</p>
-    <p>Objetivo: {{ exercise.target }}</p>
+    <p class="text-[20px]">Equipment: {{ exercise.equipment }}</p>
+    <p class="text-[20px]">Name: {{ exercise.name }}</p>
+    <p class="text-[20px]">Target: {{ exercise.target }}</p>
 </div>
