--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -14,7 +14,7 @@
                     class="bg-white rounded-lg p-2 w-full">
                 </div>
                 <div class="flex flex-col gap-5 items-center justify-center">
-                    <button class="bg-white text-[#FD6934] py-2.5 px-10 rounded-lg text-lg font-montserrat" routerLink="/preferences">
+                    <button class="bg-white text-[#FD6934] py-2.5 px-10 rounded-lg text-lg font-montserrat" (click)="register()">
                         Get Started
                         <i class="pi pi-arrow-right"></i>
                     </button>
