--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,7 +1,7 @@
 <main class="flex justify-center items-center h-screen">
     <section class="bg-[#FD6934] rounded-[15px] flex justify-between p-10 w-[50%]">
         <div class="w-[50%]">
-            <h1 class="text-white text-[48px] font-bold text-center">Login</h1>
+            <h1 class="text-white text-[48px] font-bold text-center">Sign In</h1>
             <form [formGroup]="registerForm" class="flex flex-col gap-8 items-center justify-center mt-10">
                 <div class="flex flex-col gap-2">
                     <label for="email" class="text-white text-[24px] font-thin">Email</label>
