--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,14 @@
 <div class="p-6 bg-[#EBEBEB] rounded-[15px]">
-    <img alt="Card" [src]="exercise.gifUrl" />
-    <p class="text-[20px]">Equipment: {{ exercise.equipment }}</p>
-    <p class="text-[20px]">Name: {{ exercise.name }}</p>
-    <p class="text-[20px]">Target: {{ exercise.target }}</p>
+    <div class="flex justify-center">
+        <img alt="Card" [src]="exercise.gifUrl" />
+    </div>
+    <div>
+        <p class="text-[20px]">Equipment: {{ exercise.equipment }}</p>
+        <p class="text-[20px]">Name: {{ exercise.name }}</p>
+        <p class="text-[20px]">Target: {{ exercise.target }}</p>
+    </div>
+    <div class="flex justify-between">
+        <p-button icon="pi pi-bookmark" [rounded]="true" [text]="true" (onClick)="addToFavoritesHandler()" />
+        <p-button icon="pi pi-trash" [rounded]="true" [text]="true" (onClick)="removeFromFavoritesHandler()" />
+    </div>
 </div>
