--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="flex flex-col gap-2">
                     <label for="password" class="text-white text-[24px] font-sans">Password</label>
-                    <input type="password" id="password" name="password" formControlName="password" placeholder="Enter your password"
+                    <input type="password" id="password" name="password" formControlName="password" placeholder="Password Min. 4 characters"
                     class="bg-white rounded-lg p-2 w-full">
                 </div>
                 <div class="flex flex-col gap-5 items-center justify-center">
@@ -24,3 +24,4 @@
         </div>
     </section>
 </main>
+
