--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,8 +4,8 @@
             <h1 class="text-white text-[48px] font-bold text-center">Sign In</h1>
             <form [formGroup]="registerForm" class="flex flex-col gap-8 items-center justify-center mt-10">
                 <div class="flex flex-col gap-2">
-                    <label for="email" class="text-white text-[24px] font-thin">Email</label>
-                    <input type="email" id="email" name="email" formControlName="email" placeholder="Enter your email"
+                    <label for="mail" class="text-white text-[24px] font-thin">Email</label>
+                    <input type="email" id="mail" name="mail" formControlName="mail" placeholder="Enter your email"
                     class="bg-white rounded-lg p-2">
                 </div>
                 <div class="flex flex-col gap-2">
